# mpdroot

./:  README  .clang-format  .gitignore  .gitlab-ci-nicadist.yml  .gitlab-ci.yml  .mailmap  CMakeLists.txt  CMakeListst_new.txt  CODEOWNERS  INSTALL.JINR  README.md  SetEnv.sh
KFParticle/: CMakeLists.txt  KFLinkDef.h  MpdKfParticleFinder.cxx  MpdKfParticleFinder.h
KFParticle/KFParticle/: KFPTrack.h  KFParticle.cxx  KFParticle.h  KFParticleFinder.cxx  KFParticleFinder.h  KFParticleSIMD.cxx  KFParticleSIMD.h  KFParticleTopoReconstructor.cxx  KFParticleTopoReconstructor.h
KFParticle/KFParticlePerformance/: KFParticlePerformanceBase.cxx  KFTopoPerformance.cxx  KFTopoPerformance.h
KFParticle/Vc/: CMakeLists.txt
KFParticle/doc/: usersGuide.tex
cmake/external_patches/kfpackage/: CMakeLists.txt
core/mpdDst/: CMakeLists.txt  MpdDstCompressTask.cxx  MpdDstCompressTask.h  MpdFillDstTask.cxx  MpdFillDstTask.h  MpdMiniDstFillTask.cxx  MpdMiniDstFillTask.h
core/mpdDst/MpdMiniEvent/: CMakeLists.txt  MpdMiniArrays.cxx  MpdMiniArrays.h  MpdMiniBECalCluster.cxx  MpdMiniBECalCluster.h  MpdMiniBTofHit.cxx  MpdMiniBTofHit.h  MpdMiniBTofPidTraits.cxx  MpdMiniBTofPidTraits.h  MpdMiniDst.cxx  MpdMiniDst.h  MpdMiniDstReader.cxx  MpdMiniDstReader.h  MpdMiniEvent.cxx  MpdMiniEvent.h  MpdMiniFHCalHit.cxx  MpdMiniFHCalHit.h  MpdMiniHelix.cxx  MpdMiniHelix.h  MpdMiniMcEvent.cxx  MpdMiniMcEvent.h  MpdMiniMcTrack.cxx  MpdMiniMcTrack.h  MpdMiniMessMgr.h  MpdMiniPhysicalHelix.cxx  MpdMiniPhysicalHelix.h  MpdMiniTrack.cxx  MpdMiniTrack.h  MpdMiniTrackCovMatrix.cxx  MpdMiniTrackCovMatrix.h  PhysicalConstants.h  SystemOfUnits.h
physics/: CMakeLists.txt  MpdAnalysisEvent.cxx  MpdAnalysisEvent.h  MpdAnalysisEventPlane.cxx  MpdAnalysisEventPlane.h  MpdAnalysisManager.cxx  MpdAnalysisManager.h  MpdAnalysisTask.cxx  MpdAnalysisTask.h  MpdPhysicsLinkDef.h  MpdRoInvMassTask.h
physics/anaclass/: CMakeLists.txt  MpdPtTask.cxx
physics/anaclass/macros/: analysis.sh  many_jobs.sh  mergefiles.C  runanalysis.C
physics/common/: CMakeLists.txt  MpdPhysicsCommonLinkDef.h
physics/common/minidst/: CMakeLists.txt
physics/common/v0/: CMakeLists.txt  MpdDCAOnTheFly.cxx  MpdDCAOnTheFly.h  MpdSimpleLinks.cxx  MpdSimpleLinks.h  MpdV0CandidateCut.cxx  MpdV0CandidateCut.h  MpdV0CommonLinkDef.h  MpdV0DaughterCut.h  MpdV0DaughterCutBasic.h  MpdV0Finder.cxx  MpdV0Finder.h  MpdV0FinderBasic.cxx  MpdV0FinderBasic.h  MpdV0FinderHelix.cxx  MpdV0FinderHelix.h  MpdV0FinderKFPackage.cxx  MpdV0FinderKFPackage.h  (+8 more)
physics/evCentrality/: CMakeLists.txt  MpdCentralityAll.cxx  MpdCentralityAll.h  MpdCentralityAllLinkDef.h  MpdCentralityAllParams.cxx  MpdCentralityAllParams.h
physics/evPID/: CMakeLists.txt  MpdEvPIDAllLinkDef.h  MpdTrackPidMaker.cxx  MpdTrackPidMaker.h  MpdV0.h  MpdV0Maker.cxx  MpdV0Maker.h  README.md
physics/evPlane/: CMakeLists.txt  MpdEventPlaneAll.cxx  MpdEventPlaneAll.h  MpdEventPlaneAllLinkDef.h  MpdEventPlaneAllParams.cxx  MpdEventPlaneAllParams.h  README.md
physics/globalPolarization/: CMakeLists.txt  Description_WagonMC.md  Description_WagonRECO.md  MpdAnalysisTask2.cxx  MpdAnalysisTask2.h  MpdGlobalPolarizationLinkDef.h  MpdGlobalPolarizationMC.cxx  MpdGlobalPolarizationMC.h  MpdGlobalPolarizationRECO.cxx  MpdGlobalPolarizationRECO.h  MpdLambdaPol.cxx  MpdLambdaPol.h  README.md
physics/hyperons/: CMakeLists.txt  MpdAnaXiMix.cxx  MpdAnaXiMix.h  MpdLambda.cxx  MpdLambda.h  MpdXi.cxx  MpdXi.h  hyperLinkDef.h
physics/nicafemto/: CMakeLists.txt
physics/pairKK/: CMakeLists.txt  MpdPairKK.cxx  MpdPairKK.h  MpdPairKKParams.cxx  MpdPairKKParams.h  MpdPairKKTrack.h  PairKKLinkDef.h
physics/pairPK/: CMakeLists.txt  MpdPairPK.cxx  MpdPairPK.h  MpdPairPKParams.cxx  MpdPairPKParams.h  MpdPairPKTrack.cxx  MpdPairPKTrack.h  PairPKLinkDef.h
physics/pairPiK/: CMakeLists.txt  MpdPairPiK.cxx  MpdPairPiK.h  MpdPairPiKParams.cxx  MpdPairPiKParams.h  MpdPairPiKTrack.cxx  MpdPairPiKTrack.h  PairPiKLinkDef.h
physics/pairPiKs/: CMakeLists.txt  MpdPairPiKs.cxx  MpdPairPiKs.h  MpdPairPiKsParams.cxx  MpdPairPiKsParams.h  MpdPairPiKsTrack.cxx  MpdPairPiKsTrack.h  PairPiKsLinkDef.h
physics/pairPiLambda/: CMakeLists.txt  MpdPairPiLambda.cxx  MpdPairPiLambda.h  MpdPairPiLambdaParams.cxx  MpdPairPiLambdaParams.h  MpdPairPiLambdaTrack.cxx  MpdPairPiLambdaTrack.h  PairPiLambdaLinkDef.h
physics/pairPiPi/: CMakeLists.txt  MpdPairPiPi.cxx  MpdPairPiPi.h  MpdPairPiPiParams.cxx  MpdPairPiPiParams.h  MpdPairPiPiTrack.cxx  MpdPairPiPiTrack.h  PairPiPiLinkDef.h
physics/photons/: CMakeLists.txt  MpdConvPi0.cxx  MpdConvPi0.h  MpdPhoton.h  MpdPhotonAnalysisParams.cxx  MpdPhotonAnalysisParams.h
physics/pwg2/: CMakeLists.txt
physics/pwg3/: CMakeLists.txt  README.md
physics/pwg4/: CMakeLists.txt  MpdAnalysisEvent.cxx  MpdAnalysisManager.cxx  MpdAnalysisManager.h  MpdAnalysisTask.cxx  MpdAnalysisTask.h  MpdPwg4LinkDef.h  README.md
simulation/generators/: CMakeLists.txt  FairPlutoGenerator.cxx  FairPlutoReactionGenerator.cxx  FairPlutoReactionGenerator.h  Mpd3fdGenerator.h  MpdDCMSMMGenerator.cxx  MpdDecayer.cxx  MpdDecayer.h  MpdFreezoutGenerator.cxx  MpdFreezoutGenerator.h  MpdHistoGenerator.cxx  MpdHistoGenerator.h  MpdHypYPtGenerator.cxx  MpdLAQGSMGenerator.cxx  MpdMCEventHeader.cxx  MpdMcDstGenerator.cxx  MpdPHQMDGenerator.cxx  MpdPHSDGenerator.cxx  MpdPlutoGenerator.cxx  MpdRainGenerator.cxx  MpdRainGenerator.h  MpdSmashGenerator.cxx  MpdSmashGenerator.h  MpdTPythia8Generator.cxx  MpdUnigenGenerator.cxx  MpdUrqmdGenerator.h  MpdVHLLEGenerator.cxx
tools/eventDisplay/: CMakeLists.txt  MpdBoxSet.cxx  MpdBoxSet.h  MpdBoxSetDraw.cxx  MpdBoxSetDraw.h  MpdBoxSetEditor.cxx  MpdBoxSetEditor.h  MpdEventManager.cxx  MpdEventManager.h  MpdEventManagerEditor.cxx  MpdEventManagerEditor.h  MpdHitDraw.cxx  MpdHitDraw.h  MpdHitPointSetDraw.cxx  MpdHitPointSetDraw.h  MpdMCPointDraw.cxx  MpdMCPointDraw.h  MpdMCStack.cxx  MpdMCStack.h  MpdMCTracks.cxx  MpdMCTracks.h  MpdMCTracksEditor.cxx  MpdMCTracksEditor.h  MpdPointSetDraw.cxx  MpdPointSetDraw.h  MpdWebScreenshots.cxx  MpdWebScreenshots.h  MpdXMLNode.cxx  MpdXMLNode.h  README.md
(+1618 files in other folders)
